Add java io to request open modules